syntax = "proto3";
package isuxportal.proto.resources;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/resources";

import "google/protobuf/timestamp.proto";

enum EnvCheckStatus {
  NOT_STARTED = 0;
  CREATED_INSTANCE = 1; // obtained instance ip successfully
  DONE = 2; // confirmed ssh
}

message EnvCheck {
  int64 id = 1;
  int64 team_id = 2;
  string name = 3;
  string ip_address = 4;
  bool passed = 5;
  string message = 6;
  string admin_message = 7;
  string raw_data = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}
