syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/registration";

message ActivateCouponRequest {
  int64 team_id = 1;
}

message ActivateCouponResponse {}


